refactor: Modify category

--- a/_posts/tech/2025-05-18-DDD-key.md
+++ b/_posts/tech/2025-05-18-DDD-key.md
@@ -3,7 +3,7 @@ layout: post
 title: "도메인 객체 기반 키 설계: UUIDv7, 복합키, 그리고 타입 안전성"
 date: 2025-05-18
 excerpt: ""
-categories: Spring
+categories: DDD
 ---
 
 # 도메인 객체 기반 키 설계: UUIDv7, 복합키, 그리고 타입 안전성
