--- a/_posts/tech/2025-05-17-DDD-key.md
+++ b/_posts/tech/2025-05-17-DDD-key.md
@@ -3,8 +3,8 @@ layout: post
 title: "도메인 객체 기반 키 설계"
 date: 2025-05-17 00:22:00 +0530
 excerpt: "UUIDv7, 복합키, 그리고 타입 안전성"
-categories: DDD
-tags: spring
+categories: Backend
+tags: DDD
 ---
 
 
